--- a/WebProjectProject/appsettings.json
+++ b/WebProjectProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-SS00OO5\\SQLEXPRESS06;Database=WebProject;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
