Using N-Tier Architecture

--- a/WebProject.DataAccess/WebProject.DataAccess.csproj
+++ b/WebProject.DataAccess/WebProject.DataAccess.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebProjectProject_Razor\WebProject_Razor.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WebProject.Models\WebProject.Models.csproj" />
   </ItemGroup>
 
 </Project>
