--- a/WebProjectProject/appsettings.json
+++ b/WebProjectProject/appsettings.json
@@ -9,4 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-SS00OO5\\SQLEXPRESS06;Database=WebProject;Trusted_Connection=True;TrustServerCertificate=True"
   }
+  "Stripe": {
+    "SecretKey": "",
+    "PublishableKey": ""
+  }
 }
